# WxLiquidGlass

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt
.zed/: debug.json
examples/LiquidGlassDemo/: CMakeLists.txt  EmptyWindow.cpp  EmptyWindow.h  SwiftComparison  SwiftComparison.swift  main.cpp
include/WxLiquidGlass/: WxLiquidGlass.h
include/wxLiquidGlass/: wxLiquidGlass.h
src/: WxLiquidGlass.cpp  WxLiquidGlass.mm  WxLiquidGlassCommon.h  wxLiquidGlass-Swift.h  wxLiquidGlass.cpp  wxLiquidGlass.mm  wxLiquidGlassBridge.swift  wxLiquidGlassCommon.h
